module(name = "rje-force-version-example")

bazel_dep(name = "grpc-java", version = "1.66.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    artifact = "okio",
    group = "com.squareup.okio",
    version = "3.7.0",
    force_version = True,
)

maven.install(
    artifacts = [],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo.maven.apache.org/maven2/",
        "https://dl.google.com/dl/android/maven2/",
        "https://plugins.gradle.org/m2/",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")

